--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -18,3 +18,13 @@
   font-weight: 500;
   color: var(--mainWhite);
 }
+
+@media only screen and (max-width: 600px) {
+  .section-head {
+    font-size: 2em;
+  }
+  .section-desc {
+    font-size: 1em;
+    padding-bottom: 0;
+  }
+}
